--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hiraisun</title>
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>ヒライスンのホームページ?</title>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
+
 <body>
-  <header>
-    
-  </header>
-  
-  <h1>ヒライスンのホームページ建設予定地</h1>
-  
-  <footer>
-   
-  </footer>
+	<header>
+		<ul>
+			<li><a href="hiraisun.github.io" class="header-content">特に</a></li>
+			<li><a href="" class="header-content">何もなし</a></li>
+			<li><a href="" class="header-content">テナント募集中</a></li>
+		</ul>
+	</header>
+	<div class="mv-wrap">
+		<div class="mv-bg"></div>
+		<video id="video" muted autoplay loop src="minePaperCraft.mp4"></video>
+		<p class="mv-over">ヒライスン/Hiraisun</p>
+		<p class="mv-over">ヒライスン/Hiraisun</p>
+	</div>
+
+
+	<footer>
+		ふった
+	</footer>
 </body>
+
 </html>
