--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
 	</header>
 	<div class="mv-wrap">
 		<div class="mv-bg"></div>
-		<video id="video" muted autoplay loop src="minePaperCraft.mp4"></video>
-		<p class="mv-over">ヒライスン/Hiraisun</p>
-		<p class="mv-over">ヒライスン/Hiraisun</p>
+		<div class="video-wrap">
+			<video id="video" muted autoplay loop src="minePaperCraft.mp4"></video>
+		</div>
+		<div class="mv-overbox">
+			<h1 class="mvbox-title">ヒライスン/Hiraisun</h1>
+			<img src="icon.png" class="mvbox-icon">
+		</div>
 	</div>
 
 
