--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div class="mv-wrap">
 		<div class="mv-bg"></div>
 		<div class="video-wrap">
-			<video id="video" muted autoplay loop src="images/minePaperCraft.mp4"></video>
+			<video id="video" muted autoplay playsinline loop src="images/minePaperCraft.mp4"></video>
 		</div>
 		<div class="mv-overbox">
 			<h1 class="mvbox-title">ヒライスン/Hiraisun</h1>
@@ -28,9 +28,12 @@
 				<p class="mvbox-txt">Minecraftで装置作ったり、<br>紙でマイクラ作ったり。</p>
 				<div class="icon-box">
 					<p>link:</p>
-					<a href=""><img src="images/icon_youtube.png" class="sns-icon"></a>
-					<a href=""><img src="images/icon_twitter.png" class="sns-icon"></a>
-					<a href=""><img src="images/icon_niconico.png" class="sns-icon"></a>
+					<a href="https://www.youtube.com/@Hiraisun" target="_blank">
+						<img src="images/icon_youtube.png" class="sns-icon"></a>
+					<a href="https://twitter.com/hirai_sun_" target="_blank">
+						<img src="images/icon_twitter.png" class="sns-icon"></a>
+					<a href="https://www.nicovideo.jp/user/84531737" target="_blank">
+						<img src="images/icon_niconico.png" class="sns-icon"></a>
 				</div>
 			</div>
 		</div>
