--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
-<html>
 
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ヒライスンのホームページ?</title>
+	<title>ヒライスンのホームページ(?)</title>
+	<link rel="icon" href="/images/icon.png" type="image/png">
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
+
 	<header>
+
 		<ul>
-			<li><a href="" class="header-content">この</a></li>
-			<li><a href="" class="header-content">ボタンは</a></li>
-			<li><a href="" class="header-content">飾り。</a></li>
+			<li><a href="index.html" class="header-content">ホーム</a></li>
+			<li><a href="ojigiSteve.html" class="header-content">展開図配布</a></li>
 		</ul>
+		<div class="header-under"></div>
 	</header>
+
+	<!-- 上の動画部分 -->
 	<div class="mv-wrap">
-		<div class="mv-bg"></div>
 		<div class="video-wrap">
 			<video id="video" muted autoplay playsinline loop src="images/minePaperCraft.mp4"></video>
 		</div>
+		<div class="mv-bg"></div>
 		<div class="mv-overbox">
 			<h1 class="mvbox-title">ヒライスン/Hiraisun</h1>
 			<img src="images/icon.png" class="mvbox-icon">
@@ -37,6 +42,13 @@
 				</div>
 			</div>
 		</div>
+	</div>
+
+	<div class="content">
+		<h1>以下製作中やで</h1>
+		<p>web製作初心者が手探りで勉強しながらホームページ作ってます
+			<br>温かい目で見守ってやってくだせぇ
+		</p>
 	</div>
 
 
