--- a/ojigiSteve.html
+++ b/ojigiSteve.html
@@ -17,6 +17,7 @@
 		<ul>
 			<li><a href="index.html" class="header-content">ホーム</a></li>
 			<li><a href="ojigiSteve.html" class="header-content">展開図配布</a></li>
+			<li><a href="resourcePack.html" class="header-content">リソパ配布</a></li>
 		</ul>
 		<div class="header-under"></div>
 	</header>
