--- a/resourcePack.html
+++ b/resourcePack.html
@@ -21,7 +21,10 @@
 	</header>
 
 	<div class="content">
-		<h1>適当に作ったリソースパック等を配布するところ</h1>
+		<h1>適当に作ったリソースパック達</h1>
+		<h2>・簡単考古学つーる</h2>
+		<img src="images/ayasiizyari.png" alt="" style="width: 40%;">
+		<img src="images/ayasiisuna.png" alt="" style="width: 40%;">
 		<p>統合版用，あやしい砂/砂利をわかりやすいテクスチャに変更します</p>
 		<p>正直面白くなくなるのでオススメしない。</p>
 		<a href="resourcePack/簡単考古学つーる.mcpack" download>クリックでダウンロード</a>
