--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<li><a href="index.html" class="header-content">ホーム</a></li>
 			<li><a href="ojigiSteve.html" class="header-content">展開図配布</a></li>
 			<li><a href="resourcePack.html" class="header-content">リソパ配布</a></li>
+			<li><a href="/pokosero/pokosero.html" class="header-content">ぽこせろ</a></li>
 		</ul>
 		<div class="header-under"></div>
 	</header>
