展開図にロゴ,リンク htmlちょっと変えた

--- a/ojigiSteve.html
+++ b/ojigiSteve.html
@@ -26,7 +26,8 @@
 	<div class="content">
 		<h1>「おじぎスティーブ」展開図配布</h1>
 		<p>おじぎスティーブのペーパークラフトを配布します。</p>
-		<p>---使い方---<br>
+		<h2>使い方</h2>
+		<p>
 			右側の展開図をクリックでダウンロード<br>
 			「ファイルの選択」からMinecraftのスキンのpng画像をアップロードすれば、お好みのスキンで展開図を生成できます。
 		</p>
