ペパクラページのレイアウト変更

--- a/ojigiSteve.html
+++ b/ojigiSteve.html
@@ -29,15 +29,22 @@
 		<h2>使い方</h2>
 		<p>
 			右側の展開図をクリックでダウンロード<br>
-			「ファイルの選択」からMinecraftのスキンのpng画像をアップロードすれば、お好みのスキンで展開図を生成できます。
+			「ファイルの選択」からMinecraftのスキンのpng画像を読み込めば、お好みのスキンで展開図を生成できます。
 		</p>
 
-		<input type="file" accept=".png" name="" id="image-input">
+
 		<div class="image-container">
-			<img src="ojigiSteve/skin.png" alt="" id="image-preview">
-			<a href="" download="おじぎスティーブ展開図.png" id="download-a">
-				<img src="" alt="" id="raster">
-			</a>
+
+			<div class="content-left">
+				<input type="file" accept=".png" name="" id="image-input">
+				<img src="ojigiSteve/skin.png" alt="" id="image-preview">
+			</div>
+			<div class="content-right">
+				<p>↓↓↓クリックでダウンロード↓↓↓</p>
+				<a href="" download="おじぎスティーブ展開図.png" id="download-a">
+					<img src="" alt="" id="raster">
+				</a>
+			</div>
 		</div>
 
 
