--- a/resourcePack.html
+++ b/resourcePack.html
@@ -27,7 +27,7 @@
 		<img src="images/ayasiizyari.png" alt="" style="width: 40%;">
 		<img src="images/ayasiisuna.png" alt="" style="width: 40%;">
 		<p>統合版用，あやしい砂/砂利をわかりやすいテクスチャに変更します</p>
-		<p>正直面白くなくなるのでオススメしない。</p>
+		<p>面白くなくなるのでオススメしない。</p>
 		<a href="resourcePack/簡単考古学つーる.mcpack" download>クリックでダウンロード</a>
 
 
