--- a/circle.html
+++ b/circle.html
@@ -18,7 +18,6 @@
 			<li><a href="index.html" class="header-content">ホーム</a></li>
 			<li><a href="ojigiSteve.html" class="header-content">展開図配布</a></li>
 			<li><a href="resourcePack.html" class="header-content">リソパ配布</a></li>
-			<li><a href="/pokosero/pokosero.html" class="header-content">ぽこせろ</a></li>
 		</ul>
 		<div class="header-under"></div>
 	</header>
@@ -30,10 +29,14 @@
 
 		<p>半径:<input type="number" id="input-r" value="16"></p>
 
+
+
+
+
+	</div>
+
+	<div class="canvas-wrap">
 		<canvas id="out-canvas"></canvas>
-
-
-
 	</div>
 
 	<footer>
