--- a/circle.html
+++ b/circle.html
@@ -27,7 +27,7 @@
 
 
 
-		<p>半径:<input type="number" id="input-r" value="16"></p>
+		<p class="input-p">半径:<input type="number" id="input-r" value="16"></p>
 
 
 
