補助グリッド、左上オレンジ追加

--- a/circle.html
+++ b/circle.html
@@ -27,10 +27,7 @@
 
 
 
-		<p class="input-p">半径:<input type="number" id="input-r" value="16"></p>
-
-
-
+		<p class="input-p">半径:<input type="number" id="input-r" value="16"> 　　・・・小数も使えるよ</p>
 
 
 	</div>
