進化の和など見た目整えた

--- a/suica.html
+++ b/suica.html
@@ -23,13 +23,16 @@
 
 	<div class="content">
 		<h1>suicaゲーム</h1>
-		<div id="container"></div>
-
+		<div class="container">
+			<div class="left">
+				<p class="scoreP">score: <span>100</span></p>
+				<img src="suica/card_image/sinkanoWa.png" alt="">
+			</div>
+			<div id="gameCanvas"></div>
+		</div>
 	</div>
 
-	<div class="canvas-wrap">
-		<siv id="gameCanvas"></siv>
-	</div>
+
 
 
 	<footer>
