--- a/suica.html
+++ b/suica.html
@@ -25,7 +25,7 @@
 		<h1>suicaゲーム</h1>
 		<div class="container">
 			<div class="left">
-				<p class="scoreP">score: <span>100</span></p>
+				<p class="scoreP">score: <span id="scoreSpan">0</span></p>
 				<img src="suica/card_image/sinkanoWa.png" alt="">
 			</div>
 			<div id="gameCanvas"></div>
