ゲームオーバー判定以外完成

--- a/suica.html
+++ b/suica.html
@@ -23,6 +23,8 @@
 
 	<div class="content">
 		<h1>suicaゲーム</h1>
+		<p>ホイールで回転、クリックで投下です。</p>
+		<p>スマホ非対応ですごめんなさい</p>
 		<div class="container">
 			<div class="left">
 				<p class="scoreP">score: <span id="scoreSpan">0</span></p>
