--- a/suica.html
+++ b/suica.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>おじぎスティーブ配布サイト</title>
+	<title>suicaゲーム</title>
 	<link rel="icon" href="/images/icon.png" type="image/png">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link rel="stylesheet" type="text/css" href="suica/suica.css">
@@ -15,8 +15,6 @@
 
 		<ul>
 			<li><a href="index.html" class="header-content">ホーム</a></li>
-			<li><a href="ojigiSteve.html" class="header-content">展開図配布</a></li>
-			<li><a href="resourcePack.html" class="header-content">リソパ配布</a></li>
 		</ul>
 		<div class="header-under"></div>
 	</header>
