ゲームオーバー追加

--- a/suica.html
+++ b/suica.html
@@ -28,7 +28,10 @@
 				<p class="scoreP">score: <span id="scoreSpan">0</span></p>
 				<img src="suica/card_image/sinkanoWa.png" alt="">
 			</div>
-			<div id="gameCanvas"></div>
+			<div class="right">
+				<div id="gameCanvas"></div>
+				<p id="gameover"></p>
+			</div>
 		</div>
 	</div>
 
