ホームヘッダ変更

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<li><a href="resourcePack.html" class="header-content">リソパ配布</a></li>
 			<li><a href="/pokosero/pokosero.html" class="header-content">ぽこせろ</a></li>
 			<li><a href="circle.html" class="header-content">円ツール</a></li>
+			<li><a href="suica.html" class="header-content">Suicaゲーム</a></li>
 		</ul>
 		<div class="header-under"></div>
 	</header>
